--- a/static/js/graphics/TODO
+++ b/static/js/graphics/TODO
@@ -1,3 +1,3 @@
 TODO :
 
--> Put a canvas around the closeView camera when displayed
+-> Add a traveling from the center to above the target position when a pawn moves
