Adding houses to boxes

--- a/static/js/graphics/TODO
+++ b/static/js/graphics/TODO
@@ -1,3 +1,4 @@
 TODO :
 
--> Add a traveling from the center to above the target position when a pawn moves
+-> add phong material for the house
+-> store a number of houses on each box
